# eLog

./: .gitignore  CMakeLists.txt  features.md  performance.md  readme.md  todo.md
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform_windows.yml  cmake-windows-clang.yml  cmake-windows-gcc.yml  cmake-windows-msvc.yml
headonly/: eLog.hpp
libBuild/: CMakeLists.txt  fmt.hpp
libBuild/hdr/: elog.hpp  fmt.hpp  logcolor.hpp  loglevel.hpp  msg.hpp  state.hpp  stringliteral.hpp  thread.hpp
libBuild/hdr/fmt/: argparser.hpp  argument.hpp  checks.hpp  exceptions.hpp  fmt.hpp  formatargchecker.hpp  formatargcombiner.hpp  formatinterpreter.hpp  formatpack.hpp  formatparser.hpp  formatstring.hpp  formatter.hpp  generalhelper.hpp  stringhelper.hpp  typededucter.hpp
libBuild/src/: elog.cpp  formatargcombiner.cpp  logcolor.cpp  loglevel.cpp  state.cpp  thread.cpp
libBuild/src/fmt/: argument.cpp  exceptions.cpp  fmt.cpp  formatargchecker.cpp  formatargcombiner.cpp  formatinterpreter.cpp  formatparser.cpp  formatstring.cpp  generalhelper.cpp  stringhelper.cpp
libBuild/tmp/: fmt.hpp
test/: CMakeLists.txt  assert.h  containsChar.cxx  fmtAlignment.cxx  fmtComplex.cxx  fmtPrecision.cxx  fmtSimple.cxx  isContainer.cxx  logBuilding.cxx
